Improve UserCohorts collection/execution
Use Stream.toList() instead of Collectors.toList() and use parasitic
execution context instead of bouncing through global context.

JIRA: CONTROLLER-2190
Change-Id: Ifb2eed48db41258928b6203d237372b80c67afe1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>